# decision-passport-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.9.0.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
docs/: AUDIT_PROTOCOL_PYTHON_V0_5_0.md  AUTONOMOUS_ACTION_PROFILE.md  BATCH_VERIFICATION.md  BOUNDARIES.md  SIMULATION_TO_EXECUTION_PROFILE.md  TAMPER_CASES.md  THREAT_MODEL.md  TOOL_CALL_WRAPPER.md  VERIFICATION_MODEL.md  adoption-signals.md  append-only-guarantees.md  bundle-diff.md  compatibility-matrix.md  how-it-works.md  pricing.md  protocol-conformance.md  release-checklist.md  release-provenance.md  release-verification.md  schema-versioning.md  verifier-auditor-output.md  verifier-compatibility-promise.md
fixtures/: README.md  auth-exec-mismatch.json  broken-prev-hash.json  compatible-optional-metadata.json  conformance-manifest.json  decision-trail-invalid-missing-final-payload.json  decision-trail-minimal.json  decision-trail-valid.json  invalid-exported-at-type.json  malformed-bundle.json  manifest-mismatch-bundle.json  missing-manifest-chain-hash.json  missing-record-bundle.json  outcome-aborted.json  outcome-denied.json  outcome-expired.json  outcome-failed.json  outcome-link-mismatch.json  outcome-pending.json  outcome-success.json  passport-revoked.json  passport-superseded.json  runtime-claim-expired.json  runtime-claim-nonce-reused.json  runtime-claim-payload-mismatch.json  runtime-claim-valid.json  semantic-inconsistent.json  tampered-bundle.json  trail-link-mismatch.json  unsupported-profile.json  unsupported-version.json  valid-bundle.json  valid-bundle.template.json  verifier-golden-outputs.json  wrong-sequence.json
python/decision_passport_py/: README.md  pyproject.toml
python/decision_passport_py/src/decision_passport/: __init__.py  __main__.py  canonical.py  chain.py  diff.py  diff_bundles.py  exceptions.py  explain_tamper.py  fixtures.py  hashing.py  manifest.py  types.py  verify.py
python/decision_passport_py/tests/: test_fixture_conformance.py  test_python_core_surface.py
scripts/: check-conformance-parity.ts  check-reference-integrations.ts  check-verifier-golden.ts  check-workflow-discipline.ts  diff-bundles.ts  generate-autonomous-fixtures.ts  generate-checksums.ts  (+3 more)
(+42 files in other folders)
