[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-passport-py"
version = "0.6.0"
description = "offline-verifiable authorization and execution receipts for AI and high-consequence software actions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Decision Passport Maintainers" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/brigalss-a/decision-passport-core"
Repository = "https://github.com/brigalss-a/decision-passport-core"
Documentation = "https://github.com/brigalss-a/decision-passport-core#readme"
Issues = "https://github.com/brigalss-a/decision-passport-core/issues"

[project.scripts]
decision-passport-verify = "decision_passport.verify:main"
decision-passport-diff = "decision_passport.diff:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
